# KubeMarketApp

./: .gitignore  AGENTS.md  Dockerfile  Pipfile  auth.py  config.py  main.py  makefile  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build-push.yml
docs/: AUTHENTICATION.md  GOOGLE_SHEETS_SETUP.md
models/: __init__.py  net_worth.py
mychart/: values-with-tls.yaml  values.yaml
mychart/templates/: _helpers.tpl  deployment.yaml
notes/: project-findings.md
perf/: README.md  endpoints.local.json
scripts/: cluster-bootstrap.sh  get-api-password.sh  perf_test.py  restart-deployment.sh  run.sh
services/: __init__.py  google_sheets.py
